# rustint

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  build.sh
include/rustint/: lib.hpp
tests/: test_rustint.cpp
